--- a/main.css
+++ b/main.css
@@ -13,6 +13,15 @@ a {
     text-decoration: none;
 }
 
+.compositor {
+    position: relative;
+}
+
+#threejs {
+    height: 100%;
+    width: 100%;
+}
+
 a:hover {
     text-decoration: underline;
 }
@@ -47,4 +56,9 @@ button,
 input,
 select {
     pointer-events: auto;
+}
+
+.feature-icon {
+    width: 64px;
+    height: 64px;
 }
